--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -7,7 +7,7 @@ on:
   push:
     branches: [ main ]
   pull_request:
-    branches: [ * ]
+    types: ['opened', 'edited', 'reopened', 'synchronize']
 
 jobs:
   build:
