--- a/.github/workflows/checkstyle.yml
+++ b/.github/workflows/checkstyle.yml
@@ -1,3 +1,5 @@
+name: Checkstyle
+
 on: pull_request
 
 jobs:
@@ -12,4 +14,4 @@ jobs:
       with:
         github_token: ${{ secrets.GITHUB_TOKEN }}
         reporter: 'github-pr-check'
-        tool_name: 'testtool'
+        tool_name: 'Checkstyle Checks'
