--- a/.github/workflows/pmd.yml
+++ b/.github/workflows/pmd.yml
@@ -10,4 +10,4 @@ jobs:
     steps:
       - uses: sfdx-actions/setup-pmd@v1
       - name: run-pmd
-        run: pmd -d ./src/main/java -R category/apex/design.xml -f text
+        run: pmd -d ./src/main/java/ -R category/apex/design.xml -f text
