--- a/.github/workflows/pmd.yml
+++ b/.github/workflows/pmd.yml
@@ -1,13 +1,35 @@
-name: PMD Scan
-
-on: pull_request
+name: PMD Static Code Analysis
+on:
+  pull_request:
 
 jobs:
-  pmd:
-                    
+  pmd-analyser-check:
+    name: PMD Static Code Analysis
+
     runs-on: ubuntu-latest
-                          
+    
     steps:
-      - uses: sfdx-actions/setup-pmd@v1
-      - name: run-pmd
-        run: pmd -d ./src/main/java/ -R category/apex/design.xml -f text
+      - name: Checkout Repository
+        uses: actions/checkout@v2
+        with:
+          # Incremental diffs require fetch depth to be at 0 to grab the target branch
+          fetch-depth: '0'
+      - name: Run PMD Analyser
+        id: pmd-analysis
+        uses: synergy-au/pmd-analyser-action@v2
+        with:
+          pmd-version: '6.34.0'
+          file-path: './src'
+          rules-path: './pmd-ruleset.xml'
+          error-rules: 'AvoidDirectAccessTriggerMap,AvoidDmlStatementsInLoops,AvoidHardcodingId'
+          note-rules: 'ApexDoc'
+      - name: Upload results to GitHub
+        uses: github/codeql-action/upload-sarif@v1
+        with:
+          sarif_file: pmd-output.sarif
+      - name: No PMD Errors?
+        run: |
+          if ${{ steps.pmd-analysis.outputs.error-found }}
+          then
+            exit 3
+          fi
